--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@
     license = "MIT OR Apache-2.0"
     name = "waiter-trait"
     readme = "README.md"
-    version = "0.1.0"
+    repository = "https://github.com/jw-mcu-rust/waiter-trait"
+    version = "0.2.0"
 
     [package.metadata.docs.rs]
         features = ["std"]
