--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,6 @@ on:
 
 jobs:
   publish:
-    needs: test
     runs-on: ubuntu-latest
     permissions:
       id-token: write # Required for OIDC token exchange
@@ -20,17 +19,17 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
       - name: Check
-        run: cargo Check
+        run: cargo check
       - name: Test
         run: cargo test --features=std
       - name: Dry run
         if: github.ref_type != 'tag'
-        run: cargo publish --features=stm32f103,xG --dry-run
+        run: cargo publish --features=std --dry-run
       - uses: rust-lang/crates-io-auth-action@v1
         if: github.ref_type == 'tag'
         id: auth
       - name: Publish crate
         if: github.ref_type == 'tag'
-        run: cargo publish --features=stm32f103,xG
+        run: cargo publish --features=std
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
