--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,13 @@
     name = "waiter-trait"
     readme = "README.md"
     repository = "https://github.com/jw-mcu-rust/waiter-trait"
-    version = "0.4.0"
+    version = "0.5.0"
 
     [package.metadata.docs.rs]
         features = ["std"]
 
 [features]
     std = []
+
+[dependencies]
+    embedded-hal = "1"
