--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@
     name = "waiter-trait"
     readme = "README.md"
     repository = "https://github.com/jw-mcu-rust/waiter-trait"
-    version = "0.5.2"
+    version = "0.6.0"
 
     [package.metadata.docs.rs]
         features = ["std"]
@@ -18,3 +18,4 @@
 
 [dependencies]
     embedded-hal = "1"
+    fugit = "0.3"
